# anvil

./: .env.example  .gitignore  CLI_EXAMPLES.md  MIGRATION_PLAN_V2.md  README.md  SCOUT_QUICKSTART.md  TODO.md  main.py  pyproject.toml  raw.jsonl  temp.html
.github/: copilot-instructions.md
chats/: cursor_redit.md
docs/: CODING_AGENT_BEST_OF_THE_BEST_PLAN.md  CODING_AGENT_IMPROVEMENTS.md  CODING_WORKFLOW_REFERENCE.md  DEEP_RESEARCH_REFERENCE_MODEL.md  DEEP_RESEARCH_SYSTEM_REFERENCE.md  ITERATIVE_LOOP_DESIGN.md
examples/: CONFIG_REFERENCE.md  scout_examples.sh  scout_python_api.py
src/anvil/: __main__.py  agent.py  cli.py  config.py  files.py  git.py  history.py  linter.py  llm.py  parser.py  prompts.py  shell.py
src/common/: __init__.py  agent_loop.py  circuit_breaker.py  events.py  ids.py  jsonio.py  llm.py  parallel.py  progress.py  text_template.py
src/scout/: README.md  __main__.py  agent.py  circuit_breaker.py  cli.py  complexity.py  config.py  constants.py  cost.py  extract.py  filters.py  models.py  parallel.py  pipeline.py  progress.py  rate_limiter.py  session.py  storage.py  validation.py
tests/: conftest.py  test_deep_research_resume.py  test_deep_research_workflow.py  test_files.py  test_iterative_loop_design.py  test_linter.py  test_markdown_ext.py  test_parallel_workers.py  test_parser.py  test_research_persist.py  test_sessions_anvil.py  test_subagents.py  test_tools.py  test_web_search_tool.py
tests/scout/: conftest.py  eval_queries.py  test_agent.py  test_eval.py  test_extract.py  test_fetch_resume.py  test_fetch_service.py  test_models.py  (+6 more)
(+72 files in other folders)
