[project]
name = "anvil"
version = "0.1.0"
description = "AI coding agent with structured tool support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "flake8>=7.0",
]

[project.scripts]
anvil = "anvil.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anvil"]

[tool.pytest.ini_options]
testpaths = ["tests"]
